Always show scrollbar to prevent flickering

--- a/assets/scss/_generic.scss
+++ b/assets/scss/_generic.scss
@@ -30,6 +30,7 @@ html {
 }
 
 body {
+  overflow-y: scroll;
   background: var(--gray-100);
   box-sizing: border-box;
   font: 1.6rem/2.4rem var(--font-stack, sans-serif);
